<resources>
    <string name="app_name">GoStock</string>
    <string name="new_button_label">New</string>
    <string name="edit_button_label">Edit</string>
    <string name="export_button_label">Export</string>
    <string name="export_clear_button_label">Export &amp; Clear</string>
    <string name="import_button_label">Import</string>
    <string name="manage_users_button_label">User Management</string>
    <string name="back_button_label">Back</string>
    <string name="save_button_label">Save</string>
    <string name="location_label">Location</string>
    <string name="sku_label">NSN</string>
    <string name="quantity_label">Quantity</string>
    <string name="timestamp_label">Date &amp; Time</string>
    <string name="user_label">User</string>
    <string name="username_label">Username</string>
    <string name="scan_location_button_label">Scan Location</string>
    <string name="scan_sku_button_label">Scan NSN</string>
    <string name="recent_entries_label">Recent Entries</string>
    <string name="done_label">Done</string>
    <string name="reset_password_page_title_label">Reset Password</string>
    <string name="change_password_page_title_label">Change Password</string>
    <string name="user_list_page_title_label">User List</string>
    <string name="new_user_page_title_label">New User</string>
    <string name="edit_user_page_title_label">Edit User</string>
    <string name="settings_page_title_label">Settings</string>"
    <string name="max_batch_size_label">Maximum Batch Size (items)</string>
    <string name="max_batch_time_label">Maximum Batch Time (hours)</string>
    <string name="enable_zebra_label">Zebra Integration</string>
    <string name="accepted_location_formats_label">Accepted Location Decorders</string>
    <string name="accepted_sku_formats_label">Accepted SKU Formats</string>
    <string name="new_page_title_label">New</string>
    <string name="list_page_title_label">List</string>
    <string name="edit_page_title_label">Edit</string>
    <string name="not_logged_in">Not Logged In</string>

    <string name="batch_list_page_title_label">Batch Management</string>

    <string name="batch_id_label">Batch</string>
    <string name="batch_user_label">User</string>
    <string name="batch_item_count_label">Batch Counter</string>
    <string name="batch_timer_label">Batch Timer</string>
    <string name="location_counted_label">Locations</string>
    <string name="sku_counted_label">SKUs</string>
    <string name="quantity_counted_label">Total Quantity</string>


    <string name="activity_intent_filter_action">com.example.gostock.ACTION</string> <!-- Updated action for your package -->


</resources>