<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:fitsSystemWindows="true"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/main_page_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_toolbar_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="start|center"
                android:layout_marginStart="16dp"
                android:background="@drawable/circle_button_bg_stateful"
                android:contentDescription="@string/back_button_label"
                android:src="@drawable/ic_back_icon"
                app:tint="@color/toolbar_icon_tint" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_page_title_label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_toolbar_save"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/circle_button_bg_stateful"
                android:contentDescription="@string/save_button_label"
                android:src="@drawable/ic_save_icon"
                app:tint="@color/toolbar_icon_tint" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <LinearLayout
                    android:id="@+id/ll_max_batch"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_bg_outline_gray"
                    android:padding="16dp"
                    android:layout_marginBottom="16dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_max_batch_label"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="10dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_quantity_icon"
                            app:tint="@android:color/darker_gray"
                            />

                        <TextView
                            android:id="@+id/tv_max_batch_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/max_batch_size_label"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/et_max_batch_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="e.g., 100"
                        android:inputType="text"
                        android:minHeight="20dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_max_batch_time"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_bg_outline_gray"
                    android:padding="16dp"
                    android:layout_marginBottom="16dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_max_batch_time_label"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="10dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_timer_icon"
                            app:tint="@android:color/darker_gray"
                            />

                        <TextView
                            android:id="@+id/tv_max_batch_time_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/max_batch_time_label"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/et_max_batch_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="e.g., 2"
                        android:inputType="text"
                        android:minHeight="20dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_enable_zebra"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_bg_outline_gray"
                    android:padding="16dp"
                    android:layout_marginBottom="16dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_zebra_label"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="10dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_zebra_icon"
                            app:tint="@android:color/darker_gray"
                            />

                        <TextView
                            android:id="@+id/tv_enable_zebra_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/enable_zebra_label"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <Switch
                        android:id="@+id/switch_enable_zebra_device"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Enable Zebra Device"
                        android:layout_marginTop="15dp"
                        android:minHeight="20dp"
                        android:thumbTextPadding="12dp"

                        android:thumbTint="@color/button_background_light"
                        android:trackTint="@color/switch_track_selector"
                        android:trackTintMode="add"
                        tools:ignore="UseSwitchCompatOrMaterial3"
                        android:checked="true"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_accepted_location_formats"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_bg_outline_gray"
                    android:padding="16dp"
                    android:layout_marginBottom="16dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_accepted_location_formats_label"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="10dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_warehouse_icon"
                            app:tint="@android:color/darker_gray"
                            />

                        <TextView
                            android:id="@+id/tv_accepted_location_formats_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/accepted_location_formats_label"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/et_accepted_location_formats"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="e.g., LABEL-TYPE-DATAMATRIX,DATA_MATRIX"
                        android:inputType="text"
                        android:minHeight="20dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_accepted_sku_formats"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_bg_outline_gray"
                    android:padding="16dp"
                    android:layout_marginBottom="16dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_accepted_sku_formats_label"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="10dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_box_icon"
                            app:tint="@android:color/darker_gray"
                            />

                        <TextView
                            android:id="@+id/tv_accepted_sku_formats_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/accepted_sku_formats_label"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/et_accepted_sku_formats"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="e.g., LABEL-TYPE-CODE128,CODE_128"
                        android:inputType="text"
                        android:minHeight="20dp"
                        />

                </LinearLayout>



            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>