<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:fitsSystemWindows="true"
    tools:context=".EditRecordActivity">

    <LinearLayout
        android:id="@+id/main_page_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_toolbar_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="16dp"
            android:background="@drawable/circle_button_bg_stateful"
            android:contentDescription="@string/back_button_label"
            android:src="@drawable/ic_back_icon"
            app:tint="@color/toolbar_icon_tint" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_page_title_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_toolbar_save"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle_button_bg_stateful"
            android:contentDescription="@string/save_button_label"
            android:src="@drawable/ic_save_icon"
            app:tint="@color/toolbar_icon_tint" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/rl_location"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg_outline_gray"
                android:padding="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_location_label"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginVertical="5dp"
                        android:layout_marginEnd="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_scan_qrcode_icon"
                        app:tint="@android:color/darker_gray"
                        />

                    <TextView
                        android:id="@+id/tv_location_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_label"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_edit_location_barcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="01012345678901281721022110ABCD1234\F217654"
                    android:textColor="@color/primary_text_dark"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_sku"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg_outline_gray"
                android:padding="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_sku_label"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginVertical="5dp"
                        android:layout_marginEnd="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_scan_barcode_icon"
                        app:tint="@android:color/darker_gray"
                        />

                    <TextView
                        android:id="@+id/tv_sku_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sku_label"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_edit_sku_barcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_sku_label"
                    android:layout_marginTop="8dp"
                    android:text="01012345678901281721022110ABCD1234\F217654"
                    android:textColor="@color/primary_text_dark"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_timestamp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg_outline_gray"
                android:padding="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_timestamp_label"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginVertical="5dp"
                        android:layout_marginEnd="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_date_icon"
                        app:tint="@android:color/darker_gray"
                        />

                    <TextView
                        android:id="@+id/tv_timestamp_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timestamp_label"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_edit_timestamp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="2025-01-01 01:01:01"
                    android:textColor="@color/primary_text_dark"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_user"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg_outline_gray"
                android:padding="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_user_label"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginVertical="5dp"
                        android:layout_marginEnd="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_user_icon"
                        app:tint="@android:color/darker_gray"
                        />

                    <TextView
                        android:id="@+id/tv_user_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_label"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_edit_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="username"
                    android:textColor="@color/primary_text_dark"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_quantity"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/rounded_bg_white"
                >

                <ImageView
                    android:id="@+id/iv_quantity_label"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginVertical="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_quantity_icon"
                    app:tint="@android:color/darker_gray"
                    />

                <TextView
                    android:id="@+id/tv_quantity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quantity_label"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_edit_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="end"
                    android:hint="0"
                    android:inputType="number"
                    android:minWidth="80dp"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_delete_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg_danger"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_btn_login_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="Delete"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_forward_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    app:srcCompat="@drawable/ic_delete_icon"
                    app:tint="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>